Ensure we redirect to the bumbyextras project

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <title>Bumby Extras Hymnal Project</title>
     <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/bumbyextras/css/main.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/hymns">Hymns</a></li>
-        <li><a href="/request">Request New Hymn</a></li>
+        <li><a href="/bumbyextras/">Home</a></li>
+        <li><a href="/bumbyextras/about">About</a></li>
+        <li><a href="/bumbyextras/blog">Blog</a></li>
+        <li><a href="/bumbyextras/hymns">Hymns</a></li>
+        <li><a href="/bumbyextras/request">Request New Hymn</a></li>
       </ul>
     </nav>
     <div class="container">
