--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Bumby Extras Hymnal Project</title>
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/bumbyextras/css/main.css">
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li><a href="/bumbyextras/">Home</a></li>
-        <li><a href="/bumbyextras/about">About</a></li>
-        <li><a href="/bumbyextras/blog">Blog</a></li>
-        <li><a href="/bumbyextras/hymns">Hymns</a></li>
-        <li><a href="/bumbyextras/request">Request New Hymn</a></li>
-      </ul>
-    </nav>
-    <div class="container">
-      <div class="blurb">
-        <h1>Bumby Extras Hymnal project blurb.</h1>
-        <p>Not sure what to do with this yet.</p>
-      </div><!-- /.blurb -->
-    </div><!-- /.container -->
-    <footer>
-      <ul>
-        <li><a href="mailto:jim@dukeboys.org">email</a></li>
-      </ul>
-    </footer>
-  </body>
-</html>
+---
+layout: default
+title: Bumby Extras Hymnal Project
+---
+<div class="blurb">
+	<h1>Bumby Extras Hymnal Project</h1>
+	<p>Some blurb about the Bumby Extras Hymnal Project</p>
+</div><!-- /.blurb -->
